Compilation/test/correct/test6_correct.tpc
int a;
int add(void){
	int b;
	if(a < b){
		return 1;
	}
	return a;
}

int main(void){
	add();
	return 0;
}