Compilation/test/error/test6_error.tpc
int a;
int add(voi){
	int a, b;
	if(a < b){
		return 1;
	}
	return a b;
}
